--- a/authentication-service/authenticationservice.yml
+++ b/authentication-service/authenticationservice.yml
@@ -4,7 +4,7 @@ spring.jpa.show-sql: "true"
 spring.database.driverClassName: "org.postgresql.Driver"
 spring.datasource.url: "jdbc:postgresql://postgresql:5432/hotel_db_local"
 spring.datasource.username: "postgres"
-spring.datasource.password: "acc0untPa$$w0rd"
+spring.datasource.password: acc0untPa$$w0rd
 spring.datasource.testWhileIdle: "true"
 spring.datasource.validationQuery: "SELECT 1"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
