--- a/authentication-service/authenticationservice.yml
+++ b/authentication-service/authenticationservice.yml
@@ -9,4 +9,7 @@ spring.datasource.testWhileIdle: "true"
 spring.datasource.validationQuery: "SELECT 1"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
 spring.jpa.hibernate.ddl-auto: "create-drop"
-
+spring.jpa.properties.hibernate.show_sql: "true"
+spring.jpa.properties.hibernate.use_sql_comments: "true"
+spring.jpa.properties.hibernate.format_sql: "true"
+spring.jpa.properties.hibernate.type: "trace"
